# autofonce

./: .autofonce  .drom  .gitignore  CHANGES.md  LICENSE.md  Makefile  README.md  drom.toml  dune-project
.github/workflows/: workflow.yml
docs/: index.html
docs/doc/: index.html
docs/sphinx/: index.html
opam/: autofonce.opam  autofonce_config.opam  autofonce_core.opam  autofonce_lib.opam  autofonce_m4.opam  autofonce_misc.opam  autofonce_patch.opam  autofonce_share.opam  ez_call.opam  ez_win32.opam
opam/windows/: autofonce-windows.opam  autofonce_config-windows.opam  autofonce_core-windows.opam  autofonce_lib-windows.opam  autofonce_m4-windows.opam  autofonce_misc-windows.opam  autofonce_patch-windows.opam  autofonce_share-windows.opam
scripts/: before-sphinx.sh  static-build.sh
sphinx/: about.rst  commands.rst  compat.rst  conf.py  format.rst  index.rst  install.rst  license.rst  project.rst  usage.rst
src/autofonce/: dune  index.mld  linking_flags.sh  main.ml  package.toml
src/autofonce_config/: dune  index.mld  package.toml  project_config.ml  project_config.mli  run_config.ml  run_config.mli  types.ml  version.mlt
src/autofonce_core/: dune  index.mld  package.toml  parser.ml  parser.mli  types.ml  version.mlt
src/autofonce_lib/: autotest_env.ml  call.ml  call.mli  command_config.ml  command_init.ml  command_list.ml  command_new.ml  command_promote.ml  command_run.ml  dune  filter.ml  filter.mli  globals.ml  index.mld  logging.ml  logging.mli  main.ml  main.mli  misc.ml  package.toml  parser.ml  (+13 more)
test/: testsuite.at
test/expect-tests/: dune
(+41 files in other folders)
